FIXED: Align CSS styling to reflect phase 3's intended design

--- a/main.css
+++ b/main.css
@@ -59,6 +59,34 @@ body {
     line-height: 20px;
     font-weight: 400;
 }
+
+/* Phase 3: Use flexbox to createe the tabbed nav bar */
+.tabbed-nav__container {
+    background-color: #f4f5f7;
+}
+.tabbed-nav__group {
+    border-bottom: 1px solid #dfe1e6;
+    display: flex;
+    justify-content: center;
+}
+.tabbed-nav__link {
+    background-color: white;
+    border: 1px solid #dfe1e6;
+    border-bottom: 0;
+    border-radius: 2px;
+    font-weight: bold;
+    line-height: 20px;
+    padding: 10px;
+    margin: 0 5px;
+    color: #172b4d;
+}
+@media screen and (max-width: 500px) {
+    .tabbed-nav__group,
+    .tabbed-nav__link {
+	display: block;
+    }
+}
+
 /* Supplied CSS follows. */
 .header-nav__group{
     display: flex;
